[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asymmetric-td"
version = "0.1.1"
description = "Asymmetric Temporal Difference Learning for stable deep RL"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "StarEmporium Enterprise"}
]
keywords = [
    "reinforcement-learning",
    "deep-learning",
    "dqn",
    "pytorch",
    "stable-training",
    "temporal-difference"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=1.9.0",
    "numpy>=1.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
]
examples = [
    "gymnasium>=0.26.0",
    "matplotlib>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/sallahuddin92/mini-chess-zero"
Documentation = "https://github.com/sallahuddin92/mini-chess-zero/blob/main/docs/walkthrough.md"
Repository = "https://github.com/sallahuddin92/mini-chess-zero"
"Bug Tracker" = "https://github.com/sallahuddin92/mini-chess-zero/issues"
Changelog = "https://github.com/sallahuddin92/mini-chess-zero/releases"

[tool.setuptools.packages.find]
include = ["asymmetric_td*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
